2006-04-20  Harri Pitkänen  <hatapitk@iki.fi>

	* Add AM_MAINTAINER_MODE to configure.ac
	* Some porting work for FreeBSD

2006-04-19  Harri Pitkänen  <hatapitk@iki.fi>

	* Add support for personal Malaga project file in $HOME/.voikko/suomi.pro
	* Add README

2006-04-14  Harri Pitkänen  <hatapitk@iki.fi>

	* Search malaga.h from include/malaga and include

2006-04-13  Harri Pitkänen  <hatapitk@iki.fi>

	* Add more API documentation
	* Fix configure check for gcc visibility support
	* Increase version number to 0.2

2006-04-13  Harri Pitkänen  <hatapitk@iki.fi>

	* voikkospell.c: Additional mode for automated tests
	* Fixes for bugs found by Valgrind

2006-04-11  Harri Pitkänen  <hatapitk@iki.fi>

	* Library API improvements and documentation

2006-04-11  Harri Pitkänen  <hatapitk@iki.fi>

	* Added ChangeLog
