@@ -27,10 +27,9 @@
 /* Clone of getline() from the GNU C library. FIXME: this implementation is not complete
  * or correct. */
 size_t getline(char ** lineptr, size_t * n, FILE * stream) {
-	size_t chars_read = 0;
 	char * charptr = *lineptr;
 	int i;
-	if (n <= 0) return 0;
+	if (*n <= 0) return 0;
 	for (i = 0; i < *n - 1; i++) {
 		if (fgets(charptr, 2, stream) == 0) {
 			if (i == 0) return -1;
