@@ -1,3 +1,8 @@
+2006-04-23  Harri Pitkänen  <hatapitk@iki.fi>
+
+	* Fix pointer usage in porting.c:getline
+	* configure fixes
+
 2006-04-20  Harri Pitkänen  <hatapitk@iki.fi>
 
 	* Add AM_MAINTAINER_MODE to configure.ac
